-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.18.0
-
RHEL 10.0 server
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/f4bdc498-e7db-4333-a32d-1c662301023a
test_41c failed with the following error:
Lustre: DEBUG MARKER: umount -d -f /mnt/lustre-mds4 LustreError: 502338:0:(client.c:2837:__ptlrpc_req_put()) ASSERTION( request->rq_pill.rc_reqmsg != ((void *)0x5a5a5a5a5a5a5a5aL) ) failed: LustreError: 502338:0:(client.c:2837:__ptlrpc_req_put()) LBUG CPU: 0 UID: 0 PID: 502338 Comm: osp-pre-0-3 Kdump: loaded Tainted: P OE ------- --- 6.12.0-55.34.1_lustre.el10.x86_64 #1 Tainted: [P]=PROPRIETARY_MODULE, [O]=OOT_MODULE, [E]=UNSIGNED_MODULE Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 Call Trace: <TASK> dump_stack_lvl+0x4e/0x70 lbug_with_loc.cold+0x5/0x42 [libcfs] __ptlrpc_req_put.isra.0+0x2ca/0x2d0 [ptlrpc] fld_client_rpc+0x33d/0x680 [fld] fld_server_lookup+0x217/0x390 [fld] osp_precreate_send+0x88a/0xe80 [osp] osp_precreate_thread+0x5a6/0x1260 [osp] ? __schedule+0x261/0x640 ? __pfx_autoremove_wake_function+0x10/0x10 ? __pfx_osp_precreate_thread+0x10/0x10 [osp] kthread+0xd2/0x100 ? __pfx_kthread+0x10/0x10 ret_from_fork+0x34/0x50 ? __pfx_kthread+0x10/0x10 ret_from_fork_asm+0x1a/0x30 </TASK> Kernel panic - not syncing: LBUG CPU: 0 UID: 0 PID: 502338 Comm: osp-pre-0-3 Kdump: loaded Tainted: P OE ------- --- 6.12.0-55.34.1_lustre.el10.x86_64 #1 Tainted: [P]=PROPRIETARY_MODULE, [O]=OOT_MODULE, [E]=UNSIGNED_MODULE Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 Call Trace: <TASK> dump_stack_lvl+0x4e/0x70 panic+0x113/0x2dd lbug_with_loc.cold+0x1a/0x42 [libcfs] __ptlrpc_req_put.isra.0+0x2ca/0x2d0 [ptlrpc] fld_client_rpc+0x33d/0x680 [fld] fld_server_lookup+0x217/0x390 [fld] osp_precreate_send+0x88a/0xe80 [osp] osp_precreate_thread+0x5a6/0x1260 [osp] ? __schedule+0x261/0x640 ? __pfx_autoremove_wake_function+0x10/0x10 ? __pfx_osp_precreate_thread+0x10/0x10 [osp] kthread+0xd2/0x100 ? __pfx_kthread+0x10/0x10 ret_from_fork+0x34/0x50 ? __pfx_kthread+0x10/0x10 ret_from_fork_asm+0x1a/0x30 </TASK>
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/117076 - 6.12.0-55.34.1.el10_0.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/117076 - 6.12.0-55.34.1_lustre.el10.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
conf-sanity test_41c - onyx-77vm14 crashed during conf-sanity test_41c
- is related to
-
LU-18667 RHEL 10.0 support
-
- Resolved
-